--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ __pycache__/
 *.py[cod]
 *$py.class
 
-# Django stuff:
+# Django:
 *.log
 local_settings.py
 db.sqlite3
@@ -15,8 +15,9 @@ db.sqlite3
 # Environment variables file
 .env
 
-# Node modules 
-node_modules/
-
 # System files
 .DS_Store
+
+# Client  
+client/node_modules/
+ 
